# keycard-py

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  genindex.html  index.html  keycard.commands.html  keycard.crypto.html  keycard.html  keycard.parsing.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tasks.py  tox.ini
.doctrees/: environment.pickle  index.doctree  keycard.commands.doctree  keycard.crypto.doctree  keycard.doctree  keycard.parsing.doctree  modules.doctree
.github/workflows/: build.yml  test.yml
_sources/: keycard.crypto.rst.txt
docs/source/: keycard.rst
example/: example.py
keycard/: __init__.py  apdu.py  card_interface.py  constants.py  exceptions.py  keycard.py  preconditions.py  secure_channel.py  transport.py
keycard/commands/: __init__.py  change_secret.py  derive_key.py  export_key.py  factory_reset.py  generate_key.py  generate_menmonic.py  get_data.py  get_status.py  ident.py  init.py  mutually_authenticate.py  open_secure_channel.py  pair.py  remove_key.py  select.py  sign.py  store_data.py  unblock_pin.py  unpair.py  verify_pin.py
keycard/crypto/: aes.py  ecc.py  generate_pairing_token.py  kdf.py  padding.py
keycard/example/: example.py
keycard/parsing/: application_info.py  capabilities.py  identity.py  keypath.py  tlv.py  (+1 more)
tests/: mocks.py  test_aes.py  test_apdu.py  test_application_info.py  test_identity.py  test_keycard.py  test_padding.py  test_parsing.py  test_preconditions.py  test_secure_channel.py  test_tlv.py  test_transport.py  test_vectors.py  test_verify_pin.py
(+22 files in other folders)
